@@ -790,7 +790,8 @@ Each elements are regexp of field-name.")
     (narrow-to-region (point-max)(point-max))
     (mime-view-insert-text-content entity situation)
     (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
+    (let ((beg (point-min))
+	  (adaptive-fill-mode nil))
       (remove-text-properties beg (point-max) '(face nil))
       (richtext-decode beg (point-max)))))
 
@@ -799,7 +800,8 @@ Each elements are regexp of field-name.")
     (narrow-to-region (point-max)(point-max))
     (mime-view-insert-text-content entity situation)
     (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
+    (let ((beg (point-min))
+	  (adaptive-fill-mode nil))
       (remove-text-properties beg (point-max) '(face nil))
       (enriched-decode beg (point-max)))))
 
